// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get core and supplementary resources grouped by types 1`] = `
Array [
  Object {
    "id": "urn:resourcetype:learningPath",
    "name": "Læringssti",
    "resources": Array [
      Object {
        "contentUri": "urn:article:1",
        "id": "urn:resource:2",
        "name": "Hva er en idé?",
        "resourceTypes": Array [
          Object {
            "id": "urn:resourcetype:subjectMaterial",
          },
          Object {
            "id": "urn:resourcetype:learningPath",
          },
        ],
      },
    ],
  },
  Object {
    "id": "urn:resourcetype:subjectMaterial",
    "name": "Fagstoff",
    "resources": Array [
      Object {
        "contentUri": "urn:learningpath:1",
        "id": "urn:resource:1",
        "name": "Teknikker for idéutvikling",
        "resourceTypes": Array [
          Object {
            "id": "urn:resourcetype:subjectMaterial",
          },
        ],
      },
      Object {
        "contentUri": "urn:article:1",
        "id": "urn:resource:2",
        "name": "Hva er en idé?",
        "resourceTypes": Array [
          Object {
            "id": "urn:resourcetype:subjectMaterial",
          },
          Object {
            "id": "urn:resourcetype:learningPath",
          },
        ],
      },
      Object {
        "contentUri": "urn:article:2",
        "id": "urn:resource:3",
        "name": "Ideer og idéutvikling",
        "resourceTypes": Array [
          Object {
            "id": "urn:resourcetype:subjectMaterial",
          },
          Object {
            "id": "urn:resourcetype:academicArticle",
          },
        ],
      },
      Object {
        "additional": true,
        "contentUri": "urn:article:3",
        "id": "urn:resource:4",
        "name": "Hva er menneskerettigheter?",
        "resourceTypes": Array [
          Object {
            "id": "urn:resourcetype:subjectMaterial",
          },
        ],
      },
      Object {
        "additional": true,
        "contentUri": "urn:article:2",
        "id": "urn:resource:6",
        "name": "Endring av NATOs strategi",
        "resourceTypes": Array [
          Object {
            "id": "urn:resourcetype:subjectMaterial",
          },
          Object {
            "id": "urn:resourcetype:academicArticle",
          },
        ],
      },
    ],
    "subtypes": Array [
      Object {
        "id": "urn:resourcetype:academicArticle",
        "name": "Fagartikkel",
      },
      Object {
        "id": "urn:resourcetype:movieAndClip",
        "name": "Film og filmklipp",
      },
      Object {
        "id": "urn:resourcetype:simulation",
        "name": "Simulering",
      },
    ],
  },
  Object {
    "id": "urn:resourcetype:tasksAndActivities",
    "name": "Oppgaver og aktiviteter",
    "resources": Array [
      Object {
        "additional": true,
        "contentUri": "urn:article:4",
        "id": "urn:resource:5",
        "name": "Påstander konflikter",
        "resourceTypes": Array [
          Object {
            "id": "urn:resourcetype:tasksAndActivities",
          },
        ],
      },
    ],
    "subtypes": Array [
      Object {
        "id": "urn:resourcetype:exercise",
        "name": "Øvelse",
      },
      Object {
        "id": "urn:resourcetype:task",
        "name": "Oppgave",
      },
      Object {
        "id": "urn:resourcetype:workAssignment",
        "name": "Arbeidsoppdrag",
      },
    ],
  },
]
`;

exports[`get core resources grouped by types 1`] = `
Array [
  Object {
    "id": "urn:resourcetype:learningPath",
    "name": "Læringssti",
    "resources": Array [
      Object {
        "contentUri": "urn:article:1",
        "id": "urn:resource:2",
        "name": "Hva er en idé?",
        "resourceTypes": Array [
          Object {
            "id": "urn:resourcetype:subjectMaterial",
          },
          Object {
            "id": "urn:resourcetype:learningPath",
          },
        ],
      },
    ],
  },
  Object {
    "id": "urn:resourcetype:subjectMaterial",
    "name": "Fagstoff",
    "resources": Array [
      Object {
        "contentUri": "urn:learningpath:1",
        "id": "urn:resource:1",
        "name": "Teknikker for idéutvikling",
        "resourceTypes": Array [
          Object {
            "id": "urn:resourcetype:subjectMaterial",
          },
        ],
      },
      Object {
        "contentUri": "urn:article:1",
        "id": "urn:resource:2",
        "name": "Hva er en idé?",
        "resourceTypes": Array [
          Object {
            "id": "urn:resourcetype:subjectMaterial",
          },
          Object {
            "id": "urn:resourcetype:learningPath",
          },
        ],
      },
      Object {
        "contentUri": "urn:article:2",
        "id": "urn:resource:3",
        "name": "Ideer og idéutvikling",
        "resourceTypes": Array [
          Object {
            "id": "urn:resourcetype:subjectMaterial",
          },
          Object {
            "id": "urn:resourcetype:academicArticle",
          },
        ],
      },
    ],
    "subtypes": Array [
      Object {
        "id": "urn:resourcetype:academicArticle",
        "name": "Fagartikkel",
      },
      Object {
        "id": "urn:resourcetype:movieAndClip",
        "name": "Film og filmklipp",
      },
      Object {
        "id": "urn:resourcetype:simulation",
        "name": "Simulering",
      },
    ],
  },
]
`;

exports[`resources types sort order 1`] = `
Array [
  Object {
    "id": "urn:resourcetype:learningPath",
    "name": "Læringssti",
  },
  Object {
    "id": "urn:resourcetype:subjectMaterial",
    "name": "Fagstoff",
    "subtypes": Array [
      Object {
        "id": "urn:resourcetype:academicArticle",
        "name": "Fagartikkel",
      },
      Object {
        "id": "urn:resourcetype:movieAndClip",
        "name": "Film og filmklipp",
      },
      Object {
        "id": "urn:resourcetype:simulation",
        "name": "Simulering",
      },
    ],
  },
  Object {
    "id": "urn:resourcetype:tasksAndActivities",
    "name": "Oppgaver og aktiviteter",
    "subtypes": Array [
      Object {
        "id": "urn:resourcetype:exercise",
        "name": "Øvelse",
      },
      Object {
        "id": "urn:resourcetype:task",
        "name": "Oppgave",
      },
      Object {
        "id": "urn:resourcetype:workAssignment",
        "name": "Arbeidsoppdrag",
      },
    ],
  },
  Object {
    "id": "urn:resourcetype:reviewResource",
    "name": "Vurderingsressurs",
  },
  Object {
    "id": "urn:resourcetype:SourceMaterial",
    "name": "Kildemateriale",
  },
  Object {
    "id": "urn:resourcetype:externalResource",
    "name": "Ekstern læringsressurs",
  },
  Object {
    "id": "urn:resourcetype:concept",
    "name": "Begrep",
  },
]
`;
